Remove Arrays.asList()