@@ -37,7 +37,6 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.junit.jupiter.params.provider.ValueSource;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -80,7 +79,7 @@ public class PartitionChangeBuilderTest {
         assertTrue(changeRecordIsNoOp(new PartitionChangeRecord()));
         assertFalse(changeRecordIsNoOp(new PartitionChangeRecord().setLeader(1)));
         assertFalse(changeRecordIsNoOp(new PartitionChangeRecord().
-            setIsr(Arrays.asList(1, 2, 3))));
+            setIsr(List.of(1, 2, 3))));
         assertFalse(changeRecordIsNoOp(new PartitionChangeRecord().
             setRemovingReplicas(List.of(1))));
         assertFalse(changeRecordIsNoOp(new PartitionChangeRecord().
@@ -95,7 +94,7 @@ public class PartitionChangeBuilderTest {
                   .setLeaderRecoveryState(LeaderRecoveryState.RECOVERED.value())
             )
         );
-        assertFalse(changeRecordIsNoOp(new PartitionChangeRecord().setDirectories(Arrays.asList(
+        assertFalse(changeRecordIsNoOp(new PartitionChangeRecord().setDirectories(List.of(
                 Uuid.fromString("5JwD0VNXRV2Wr9CCON38Tw"),
                 Uuid.fromString("zpL1bRzTQXmmgdxlLHOWuw"),
                 Uuid.fromString("6iGUpAkHQXC6bY0FTcPRDw")
@@ -270,16 +269,16 @@ public class PartitionChangeBuilderTest {
         assertElectLeaderEquals(createFooBuilder(version), 1, false);
         assertElectLeaderEquals(createFooBuilder(version).setElection(Election.UNCLEAN), 1, false);
         assertElectLeaderEquals(createFooBuilder(version)
-            .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(1, 3))), 1, false);
+            .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(1, 3))), 1, false);
         assertElectLeaderEquals(createFooBuilder(version).setElection(Election.UNCLEAN)
-            .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(1, 3))), 1, false);
+            .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(1, 3))), 1, false);
         assertElectLeaderEquals(createFooBuilder(version)
             .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(3))), NO_LEADER, false);
         assertElectLeaderEquals(createFooBuilder(version).setElection(Election.UNCLEAN).
             setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(3))), 2, true);
         assertElectLeaderEquals(
             createFooBuilder(version).setElection(Election.UNCLEAN)
-                .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(4))).setTargetReplicas(Arrays.asList(2, 1, 3, 4)),
+                .setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(4))).setTargetReplicas(List.of(2, 1, 3, 4)),
             4,
             false
         );
@@ -317,7 +316,7 @@ public class PartitionChangeBuilderTest {
         MetadataVersion metadataVersion = MetadataVersion.fromVersionString(metadataVersionString);
         testTriggerLeaderEpochBumpIfNeeded(
             createFooBuilder(metadataVersion).setTargetIsrWithBrokerStates(
-                AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(2, 1))),
+                AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(2, 1))),
             new PartitionChangeRecord(),
             NO_LEADER_CHANGE);
     }
@@ -332,7 +331,7 @@ public class PartitionChangeBuilderTest {
         MetadataVersion metadataVersion = MetadataVersion.fromVersionString(metadataVersionString);
         testTriggerLeaderEpochBumpIfNeeded(
             createFooBuilder(metadataVersion).setTargetIsrWithBrokerStates(
-                AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(2, 1))),
+                AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(2, 1))),
             new PartitionChangeRecord(),
             1);
     }
@@ -346,7 +345,7 @@ public class PartitionChangeBuilderTest {
         MetadataVersion metadataVersion = MetadataVersion.fromVersionString(metadataVersionString);
         testTriggerLeaderEpochBumpIfNeeded(
             createFooBuilder(metadataVersion).setTargetIsrWithBrokerStates(
-                AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(2, 1, 3, 4))),
+                AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(2, 1, 3, 4))),
             new PartitionChangeRecord(),
             NO_LEADER_CHANGE);
     }
@@ -360,7 +359,7 @@ public class PartitionChangeBuilderTest {
     public void testLeaderEpochBumpOnNewReplicaSetDisjoint(String metadataVersionString) {
         MetadataVersion metadataVersion = MetadataVersion.fromVersionString(metadataVersionString);
         testTriggerLeaderEpochBumpIfNeeded(
-            createFooBuilder(metadataVersion).setTargetReplicas(Arrays.asList(2, 1, 4)),
+            createFooBuilder(metadataVersion).setTargetReplicas(List.of(2, 1, 4)),
             new PartitionChangeRecord(),
             1);
     }
@@ -419,14 +418,14 @@ public class PartitionChangeBuilderTest {
                     new PartitionChangeRecord()
                       .setTopicId(FOO_ID)
                       .setPartitionId(0)
-                      .setIsr(Arrays.asList(2, 1)),
+                      .setIsr(List.of(2, 1)),
                     version
                 )
             ),
             // Actual
             createFooBuilder(version)
               .setTargetIsrWithBrokerStates(
-                  AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(2, 1))
+                  AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(2, 1))
               )
               .build()
         );
@@ -438,10 +437,10 @@ public class PartitionChangeBuilderTest {
         assertEquals(Optional.of(new ApiMessageAndVersion(new PartitionChangeRecord().
                 setTopicId(FOO_ID).
                 setPartitionId(0).
-                setIsr(Arrays.asList(2, 3)).
+                setIsr(List.of(2, 3)).
                 setLeader(2), version)),
             createFooBuilder(version).setTargetIsrWithBrokerStates(AlterPartitionRequest.
-                newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(2, 3))).build());
+                newIsrToSimpleNewIsrWithBrokerEpochs(List.of(2, 3))).build());
     }
 
     @ParameterizedTest
@@ -450,13 +449,13 @@ public class PartitionChangeBuilderTest {
         PartitionChangeRecord expectedRecord = new PartitionChangeRecord().
                 setTopicId(FOO_ID).
                 setPartitionId(0).
-                setReplicas(Arrays.asList(3, 2, 1));
+                setReplicas(List.of(3, 2, 1));
         if (version >= 1) {
             Map<Integer, Uuid> dirs = DirectoryId.createAssignmentMap(FOO.replicas, FOO.directories);
-            expectedRecord.setDirectories(Arrays.asList(dirs.get(3), dirs.get(2), dirs.get(1)));
+            expectedRecord.setDirectories(List.of(dirs.get(3), dirs.get(2), dirs.get(1)));
         }
         assertEquals(Optional.of(new ApiMessageAndVersion(expectedRecord, version)),
-            createFooBuilder(version).setTargetReplicas(Arrays.asList(3, 2, 1)).build());
+            createFooBuilder(version).setTargetReplicas(List.of(3, 2, 1)).build());
     }
 
     @ParameterizedTest
@@ -465,36 +464,36 @@ public class PartitionChangeBuilderTest {
         PartitionChangeRecord expectedRecord = new PartitionChangeRecord().
                 setTopicId(BAR_ID).
                 setPartitionId(0).
-                setReplicas(Arrays.asList(2, 3, 4)).
-                setIsr(Arrays.asList(2, 3, 4)).
+                setReplicas(List.of(2, 3, 4)).
+                setIsr(List.of(2, 3, 4)).
                 setLeader(2).
                 setRemovingReplicas(List.of()).
                 setAddingReplicas(List.of());
         if (version >= 1) {
             Map<Integer, Uuid> dirs = DirectoryId.createAssignmentMap(BAR.replicas, BAR.directories);
-            expectedRecord.setDirectories(Arrays.asList(dirs.get(2), dirs.get(3), dirs.get(4)));
+            expectedRecord.setDirectories(List.of(dirs.get(2), dirs.get(3), dirs.get(4)));
         }
         assertEquals(Optional.of(new ApiMessageAndVersion(expectedRecord, version)),
             createBarBuilder(version).setTargetIsrWithBrokerStates(AlterPartitionRequest.
-                newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(1, 2, 3, 4))).build());
+                newIsrToSimpleNewIsrWithBrokerEpochs(List.of(1, 2, 3, 4))).build());
     }
 
     @ParameterizedTest
     @MethodSource("partitionChangeRecordVersions")
     public void testRevertReassignment(short version) {
         PartitionReassignmentRevert revert = new PartitionReassignmentRevert(BAR);
-        assertEquals(Arrays.asList(1, 2, 3), revert.replicas());
-        assertEquals(Arrays.asList(1, 2, 3), revert.isr());
+        assertEquals(List.of(1, 2, 3), revert.replicas());
+        assertEquals(List.of(1, 2, 3), revert.isr());
         PartitionChangeRecord expectedRecord = new PartitionChangeRecord().
                 setTopicId(BAR_ID).
                 setPartitionId(0).
-                setReplicas(Arrays.asList(1, 2, 3)).
+                setReplicas(List.of(1, 2, 3)).
                 setLeader(1).
                 setRemovingReplicas(List.of()).
                 setAddingReplicas(List.of());
         if (version >= 1) {
             Map<Integer, Uuid> dirs = DirectoryId.createAssignmentMap(BAR.replicas, BAR.directories);
-            expectedRecord.setDirectories(Arrays.asList(dirs.get(1), dirs.get(2), dirs.get(3)));
+            expectedRecord.setDirectories(List.of(dirs.get(1), dirs.get(2), dirs.get(3)));
         }
         assertEquals(Optional.of(new ApiMessageAndVersion(expectedRecord, version)),
             createBarBuilder(version).
@@ -509,19 +508,19 @@ public class PartitionChangeBuilderTest {
     @MethodSource("partitionChangeRecordVersions")
     public void testRemovingReplicaReassignment(short version) {
         PartitionReassignmentReplicas replicas = new PartitionReassignmentReplicas(
-            partitionAssignment(Replicas.toList(FOO.replicas)), partitionAssignment(Arrays.asList(1, 2)));
+            partitionAssignment(Replicas.toList(FOO.replicas)), partitionAssignment(List.of(1, 2)));
         assertEquals(List.of(3), replicas.removing());
         assertEquals(List.of(), replicas.adding());
-        assertEquals(Arrays.asList(1, 2, 3), replicas.replicas());
+        assertEquals(List.of(1, 2, 3), replicas.replicas());
         PartitionChangeRecord expectedRecord = new PartitionChangeRecord().
                 setTopicId(FOO_ID).
                 setPartitionId(0).
-                setReplicas(Arrays.asList(1, 2)).
-                setIsr(Arrays.asList(2, 1)).
+                setReplicas(List.of(1, 2)).
+                setIsr(List.of(2, 1)).
                 setLeader(1);
         if (version >= 1) {
             Map<Integer, Uuid> dirs = DirectoryId.createAssignmentMap(FOO.replicas, FOO.directories);
-            expectedRecord.setDirectories(Arrays.asList(dirs.get(1), dirs.get(2)));
+            expectedRecord.setDirectories(List.of(dirs.get(1), dirs.get(2)));
         }
         assertEquals(Optional.of(new ApiMessageAndVersion(expectedRecord, version)),
             createFooBuilder(version).
@@ -534,18 +533,18 @@ public class PartitionChangeBuilderTest {
     @MethodSource("partitionChangeRecordVersions")
     public void testAddingReplicaReassignment(short version) {
         PartitionReassignmentReplicas replicas = new PartitionReassignmentReplicas(
-            partitionAssignment(Replicas.toList(FOO.replicas)), partitionAssignment(Arrays.asList(1, 2, 3, 4)));
+            partitionAssignment(Replicas.toList(FOO.replicas)), partitionAssignment(List.of(1, 2, 3, 4)));
         assertEquals(List.of(), replicas.removing());
         assertEquals(List.of(4), replicas.adding());
-        assertEquals(Arrays.asList(1, 2, 3, 4), replicas.replicas());
+        assertEquals(List.of(1, 2, 3, 4), replicas.replicas());
         PartitionChangeRecord expectedRecord = new PartitionChangeRecord().
                 setTopicId(FOO_ID).
                 setPartitionId(0).
-                setReplicas(Arrays.asList(1, 2, 3, 4)).
+                setReplicas(List.of(1, 2, 3, 4)).
                 setAddingReplicas(List.of(4));
         if (version >= 1) {
             Map<Integer, Uuid> dirs = DirectoryId.createAssignmentMap(FOO.replicas, FOO.directories);
-            expectedRecord.setDirectories(Arrays.asList(dirs.get(1), dirs.get(2), dirs.get(3), DirectoryId.UNASSIGNED));
+            expectedRecord.setDirectories(List.of(dirs.get(1), dirs.get(2), dirs.get(3), DirectoryId.UNASSIGNED));
         }
         assertEquals(Optional.of(new ApiMessageAndVersion(expectedRecord, version)),
             createFooBuilder(version).
@@ -767,13 +766,13 @@ public class PartitionChangeBuilderTest {
         assertEquals(Optional.of(new ApiMessageAndVersion(new PartitionChangeRecord().
                 setTopicId(topicId).
                 setPartitionId(0).
-                setReplicas(Arrays.asList(2, 3)).
-                setIsr(Arrays.asList(2, 3)).
+                setReplicas(List.of(2, 3)).
+                setIsr(List.of(2, 3)).
                 setRemovingReplicas(List.of()).
                 setAddingReplicas(List.of()).
                 setLeader(NO_LEADER),
                 (short) 0)),
-            partitionChangeBuilder.setTargetIsr(Arrays.asList(0, 1, 2, 3)).
+            partitionChangeBuilder.setTargetIsr(List.of(0, 1, 2, 3)).
                 build());
     }
 
@@ -803,16 +802,16 @@ public class PartitionChangeBuilderTest {
             .setUseLastKnownLeaderInBalancedRecovery(false);
 
         // Update ISR to {1, 2}
-        builder.setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(1, 2)));
+        builder.setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(1, 2)));
 
         PartitionChangeRecord record = new PartitionChangeRecord()
             .setTopicId(topicId)
             .setPartitionId(0)
-            .setIsr(Arrays.asList(1, 2))
+            .setIsr(List.of(1, 2))
             .setLeader(-2)
             .setLeaderRecoveryState(LeaderRecoveryState.NO_CHANGE);
         if (version >= 2) {
-            record.setEligibleLeaderReplicas(Arrays.asList(3, 4));
+            record.setEligibleLeaderReplicas(List.of(3, 4));
         }
         ApiMessageAndVersion expectedRecord = new ApiMessageAndVersion(record, version);
         assertEquals(Optional.of(expectedRecord), builder.build());
@@ -854,11 +853,11 @@ public class PartitionChangeBuilderTest {
             .setDefaultDirProvider(DEFAULT_DIR_PROVIDER)
             .setUseLastKnownLeaderInBalancedRecovery(false);
 
-        builder.setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(1, 2, 3)));
+        builder.setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(1, 2, 3)));
         PartitionChangeRecord record = new PartitionChangeRecord()
             .setTopicId(topicId)
             .setPartitionId(0)
-            .setIsr(Arrays.asList(1, 2, 3))
+            .setIsr(List.of(1, 2, 3))
             .setLeader(-2)
             .setLeaderRecoveryState(LeaderRecoveryState.NO_CHANGE);
 
@@ -900,11 +899,11 @@ public class PartitionChangeBuilderTest {
             .setDefaultDirProvider(DEFAULT_DIR_PROVIDER)
             .setUseLastKnownLeaderInBalancedRecovery(false);
 
-        builder.setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(Arrays.asList(1, 4)));
+        builder.setTargetIsrWithBrokerStates(AlterPartitionRequest.newIsrToSimpleNewIsrWithBrokerEpochs(List.of(1, 4)));
         PartitionChangeRecord record = new PartitionChangeRecord()
             .setTopicId(topicId)
             .setPartitionId(0)
-            .setIsr(Arrays.asList(1, 4))
+            .setIsr(List.of(1, 4))
             .setLeader(-2)
             .setLeaderRecoveryState(LeaderRecoveryState.NO_CHANGE);
         if (version < 2) {
@@ -994,7 +993,7 @@ public class PartitionChangeBuilderTest {
                 build();
         Optional<ApiMessageAndVersion> built = new PartitionChangeBuilder(registration, FOO_ID,
                 0, r -> true, MetadataVersion.IBP_3_7_IV2, 2).
-                setTargetReplicas(Arrays.asList(3, 1, 5, 4)).
+                setTargetReplicas(List.of(3, 1, 5, 4)).
                 setDirectory(5, Uuid.fromString("RNJ5oFjjSSWMMFRwqdCfJg")).
                 setDefaultDirProvider(DEFAULT_DIR_PROVIDER).
                 build();
@@ -1003,8 +1002,8 @@ public class PartitionChangeBuilderTest {
                         setTopicId(FOO_ID).
                         setPartitionId(0).
                         setLeader(1).
-                        setReplicas(Arrays.asList(3, 1, 5, 4)).
-                        setDirectories(Arrays.asList(
+                        setReplicas(List.of(3, 1, 5, 4)).
+                        setDirectories(List.of(
                                 Uuid.fromString("fM5NKyWTQHqEihjIkUl99Q"),
                                 Uuid.fromString("iU2znv45Q9yQkOpkTSy3jA"),
                                 Uuid.fromString("RNJ5oFjjSSWMMFRwqdCfJg"),
@@ -1040,7 +1039,7 @@ public class PartitionChangeBuilderTest {
                 new PartitionChangeRecord().
                         setTopicId(FOO_ID).
                         setPartitionId(0).
-                        setDirectories(Arrays.asList(
+                        setDirectories(List.of(
                                 Uuid.fromString("S1zMYZczRjWmucidLqGA5g"),
                                 DirectoryId.LOST,
                                 Uuid.fromString("pN1VKs9zRzK4APflpegAVg")
@@ -1132,7 +1131,7 @@ public class PartitionChangeBuilderTest {
             .setIsr(List.of())
             .setLeader(-1)
             .setLeaderRecoveryState(LeaderRecoveryState.NO_CHANGE)
-            .setEligibleLeaderReplicas(Arrays.asList(1, 2, 3, 4));
+            .setEligibleLeaderReplicas(List.of(1, 2, 3, 4));
 
         if (lastKnownLeaderEnabled) {
             record.setLastKnownElr(List.of(1));
