@@ -38,7 +38,6 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.OptionalInt;
 import java.util.stream.IntStream;
@@ -63,7 +62,7 @@ public class MetadataBatchLoaderTest {
 
     static {
         {
-            TOPIC_TXN_BATCH_1 = Arrays.asList(
+            TOPIC_TXN_BATCH_1 = List.of(
                 new ApiMessageAndVersion(new BeginTransactionRecord().setName("txn-1"), (short) 0),
                 new ApiMessageAndVersion(new TopicRecord()
                     .setName("foo")
@@ -73,7 +72,7 @@ public class MetadataBatchLoaderTest {
                     .setTopicId(TOPIC_FOO), (short) 0)
             );
 
-            TOPIC_TXN_BATCH_2 = Arrays.asList(
+            TOPIC_TXN_BATCH_2 = List.of(
                 new ApiMessageAndVersion(new PartitionRecord()
                     .setPartitionId(1)
                     .setTopicId(TOPIC_FOO), (short) 0),
@@ -83,7 +82,7 @@ public class MetadataBatchLoaderTest {
                 new ApiMessageAndVersion(new EndTransactionRecord(), (short) 0)
             );
 
-            TOPIC_NO_TXN_BATCH = Arrays.asList(
+            TOPIC_NO_TXN_BATCH = List.of(
                 new ApiMessageAndVersion(new TopicRecord()
                     .setName("bar")
                     .setTopicId(TOPIC_BAR), (short) 0),
