@@ -22,7 +22,6 @@ import org.apache.kafka.image.FakeSnapshotWriter;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.apache.kafka.metadata.RecordTestUtils.testRecord;
@@ -43,9 +42,9 @@ public class RaftSnapshotWriterTest {
         writer.close(true);
         assertTrue(snapshotWriter.isFrozen());
         assertTrue(snapshotWriter.isClosed());
-        assertEquals(Arrays.asList(
-                Arrays.asList(testRecord(0), testRecord(1)),
-                Arrays.asList(testRecord(2))), snapshotWriter.batches());
+        assertEquals(List.of(
+                List.of(testRecord(0), testRecord(1)),
+                List.of(testRecord(2))), snapshotWriter.batches());
     }
 
     @Test
