@@ -48,7 +48,6 @@ import org.slf4j.LoggerFactory;
 
 import java.net.InetAddress;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -59,7 +58,6 @@ import java.util.Set;
 import java.util.concurrent.CompletionStage;
 import java.util.concurrent.atomic.AtomicLong;
 
-import static java.util.Arrays.asList;
 import static org.apache.kafka.common.acl.AclOperation.ALL;
 import static org.apache.kafka.common.acl.AclOperation.ALTER;
 import static org.apache.kafka.common.acl.AclOperation.ALTER_CONFIGS;
@@ -150,9 +148,9 @@ public class StandardAuthorizerTest {
             getConfiguredSuperUsers(Map.of()));
         assertEquals(Set.of(),
             getConfiguredSuperUsers(Map.of(SUPER_USERS_CONFIG, " ")));
-        assertEquals(new HashSet<>(asList("User:bob", "User:alice")),
+        assertEquals(new HashSet<>(List.of("User:bob", "User:alice")),
             getConfiguredSuperUsers(Map.of(SUPER_USERS_CONFIG, "User:bob;User:alice ")));
-        assertEquals(new HashSet<>(asList("User:bob", "User:alice")),
+        assertEquals(new HashSet<>(List.of("User:bob", "User:alice")),
             getConfiguredSuperUsers(Map.of(SUPER_USERS_CONFIG, ";  User:bob  ;  User:alice ")));
         assertEquals("expected a string in format principalType:principalName but got bob",
             assertThrows(IllegalArgumentException.class, () -> getConfiguredSuperUsers(
@@ -235,7 +233,7 @@ public class StandardAuthorizerTest {
         configs.put(SUPER_USERS_CONFIG, "User:alice;User:chris");
         configs.put(ALLOW_EVERYONE_IF_NO_ACL_IS_FOUND_CONFIG, "true");
         authorizer.configure(configs);
-        assertEquals(new HashSet<>(asList("User:alice", "User:chris")), authorizer.superUsers());
+        assertEquals(new HashSet<>(List.of("User:alice", "User:chris")), authorizer.superUsers());
         assertEquals(ALLOWED, authorizer.defaultResult());
     }
 
@@ -274,7 +272,7 @@ public class StandardAuthorizerTest {
     @Test
     public void testFindResultImplication() throws Exception {
         // These permissions all imply DESCRIBE.
-        for (AclOperation op : asList(DESCRIBE, READ, WRITE, DELETE, ALTER)) {
+        for (AclOperation op : List.of(DESCRIBE, READ, WRITE, DELETE, ALTER)) {
             assertEquals(ALLOWED, findResult(newAction(DESCRIBE, TOPIC, "foo_bar"),
                 new MockAuthorizableRequestContext.Builder().
                     setPrincipal(new KafkaPrincipal(USER_TYPE, "bob")).build(),
@@ -286,7 +284,7 @@ public class StandardAuthorizerTest {
                         setPrincipal(new KafkaPrincipal(USER_TYPE, "bob")).build(),
                 newFooAcl(CREATE, ALLOW)));
         // Deny ACLs don't do "implication".
-        for (AclOperation op : asList(READ, WRITE, DELETE, ALTER)) {
+        for (AclOperation op : List.of(READ, WRITE, DELETE, ALTER)) {
             assertNull(findResult(newAction(DESCRIBE, TOPIC, "foo_bar"),
                     new MockAuthorizableRequestContext.Builder().
                             setPrincipal(new KafkaPrincipal(USER_TYPE, "bob")).build(),
@@ -298,7 +296,7 @@ public class StandardAuthorizerTest {
                 setPrincipal(new KafkaPrincipal(USER_TYPE, "bob")).build(),
             newFooAcl(DESCRIBE, DENY)));
         // These permissions all imply DESCRIBE_CONFIGS.
-        for (AclOperation op : asList(DESCRIBE_CONFIGS, ALTER_CONFIGS)) {
+        for (AclOperation op : List.of(DESCRIBE_CONFIGS, ALTER_CONFIGS)) {
             assertEquals(ALLOWED, findResult(newAction(DESCRIBE_CONFIGS, TOPIC, "foo_bar"),
                 new MockAuthorizableRequestContext.Builder().
                     setPrincipal(new KafkaPrincipal(USER_TYPE, "bob")).build(),
@@ -358,10 +356,10 @@ public class StandardAuthorizerTest {
     @Test
     public void testListAcls() {
         StandardAuthorizer authorizer = createAndInitializeStandardAuthorizer();
-        List<StandardAclWithId> fooAcls = asList(
+        List<StandardAclWithId> fooAcls = List.of(
             withId(newFooAcl(READ, ALLOW)),
             withId(newFooAcl(WRITE, ALLOW)));
-        List<StandardAclWithId> barAcls = asList(
+        List<StandardAclWithId> barAcls = List.of(
             withId(newBarAcl(DESCRIBE_CONFIGS, DENY)),
             withId(newBarAcl(ALTER_CONFIGS, DENY)));
         fooAcls.forEach(a -> authorizer.addAcl(a.id(), a.acl()));
@@ -379,10 +377,10 @@ public class StandardAuthorizerTest {
     @Test
     public void testSimpleAuthorizations() throws Exception {
         StandardAuthorizer authorizer = createAndInitializeStandardAuthorizer();
-        List<StandardAclWithId> fooAcls = asList(
+        List<StandardAclWithId> fooAcls = List.of(
             withId(newFooAcl(READ, ALLOW)),
             withId(newFooAcl(WRITE, ALLOW)));
-        List<StandardAclWithId> barAcls = asList(
+        List<StandardAclWithId> barAcls = List.of(
             withId(newBarAcl(DESCRIBE_CONFIGS, ALLOW)),
             withId(newBarAcl(ALTER_CONFIGS, ALLOW)));
         fooAcls.forEach(a -> authorizer.addAcl(a.id(), a.acl()));
@@ -400,7 +398,7 @@ public class StandardAuthorizerTest {
     @Test
     public void testDenyPrecedenceWithOperationAll() throws Exception {
         StandardAuthorizer authorizer = createAndInitializeStandardAuthorizer();
-        List<StandardAcl> acls = Arrays.asList(
+        List<StandardAcl> acls = List.of(
             new StandardAcl(TOPIC, "foo", LITERAL, "User:alice", "*", ALL, DENY),
             new StandardAcl(TOPIC, "foo", PREFIXED, "User:alice", "*", READ, ALLOW),
             new StandardAcl(TOPIC, "foo", LITERAL, "User:*", "*", ALL, DENY),
@@ -410,16 +408,16 @@ public class StandardAuthorizerTest {
             StandardAclWithId aclWithId = withId(acl);
             authorizer.addAcl(aclWithId.id(), aclWithId.acl());
         });
-        assertEquals(Arrays.asList(DENIED, DENIED, DENIED, ALLOWED), authorizer.authorize(
+        assertEquals(List.of(DENIED, DENIED, DENIED, ALLOWED), authorizer.authorize(
             newRequestContext("alice"),
-            Arrays.asList(
+            List.of(
                 newAction(WRITE, TOPIC, "foo"),
                 newAction(READ, TOPIC, "foo"),
                 newAction(DESCRIBE, TOPIC, "foo"),
                 newAction(READ, TOPIC, "foobar"))));
-        assertEquals(Arrays.asList(DENIED, DENIED, DENIED, ALLOWED, DENIED), authorizer.authorize(
+        assertEquals(List.of(DENIED, DENIED, DENIED, ALLOWED, DENIED), authorizer.authorize(
             newRequestContext("bob"),
-            Arrays.asList(
+            List.of(
                 newAction(DESCRIBE, TOPIC, "foo"),
                 newAction(READ, TOPIC, "foo"),
                 newAction(WRITE, TOPIC, "foo"),
@@ -430,7 +428,7 @@ public class StandardAuthorizerTest {
     @Test
     public void testTopicAclWithOperationAll() throws Exception {
         StandardAuthorizer authorizer = createAndInitializeStandardAuthorizer();
-        List<StandardAcl> acls = Arrays.asList(
+        List<StandardAcl> acls = List.of(
             new StandardAcl(TOPIC, "foo", LITERAL, "User:*", "*", ALL, ALLOW),
             new StandardAcl(TOPIC, "bar", PREFIXED, "User:alice", "*", ALL, ALLOW),
             new StandardAcl(TOPIC, "baz", LITERAL, "User:bob", "*", ALL, ALLOW)
@@ -439,23 +437,23 @@ public class StandardAuthorizerTest {
             StandardAclWithId aclWithId = withId(acl);
             authorizer.addAcl(aclWithId.id(), aclWithId.acl());
         });
-        assertEquals(Arrays.asList(ALLOWED, ALLOWED, DENIED), authorizer.authorize(
+        assertEquals(List.of(ALLOWED, ALLOWED, DENIED), authorizer.authorize(
             newRequestContext("alice"),
-            Arrays.asList(
+            List.of(
                 newAction(WRITE, TOPIC, "foo"),
                 newAction(DESCRIBE_CONFIGS, TOPIC, "bar"),
                 newAction(DESCRIBE, TOPIC, "baz"))));
 
-        assertEquals(Arrays.asList(ALLOWED, DENIED, ALLOWED), authorizer.authorize(
+        assertEquals(List.of(ALLOWED, DENIED, ALLOWED), authorizer.authorize(
             newRequestContext("bob"),
-            Arrays.asList(
+            List.of(
                 newAction(WRITE, TOPIC, "foo"),
                 newAction(READ, TOPIC, "bar"),
                 newAction(DESCRIBE, TOPIC, "baz"))));
 
-        assertEquals(Arrays.asList(ALLOWED, DENIED, DENIED), authorizer.authorize(
+        assertEquals(List.of(ALLOWED, DENIED, DENIED), authorizer.authorize(
             newRequestContext("malory"),
-            Arrays.asList(
+            List.of(
                 newAction(DESCRIBE, TOPIC, "foo"),
                 newAction(WRITE, TOPIC, "bar"),
                 newAction(READ, TOPIC, "baz"))));
@@ -473,7 +471,7 @@ public class StandardAuthorizerTest {
         InetAddress host2 = InetAddress.getByName("192.168.1.2");
 
         StandardAuthorizer authorizer = createAndInitializeStandardAuthorizer();
-        List<StandardAcl> acls = Arrays.asList(
+        List<StandardAcl> acls = List.of(
             new StandardAcl(TOPIC, "foo", LITERAL, "User:alice", host1.getHostAddress(), READ, DENY),
             new StandardAcl(TOPIC, "foo", LITERAL, "User:alice", "*", READ, ALLOW),
             new StandardAcl(TOPIC, "bar", LITERAL, "User:bob", host2.getHostAddress(), READ, ALLOW),
@@ -485,28 +483,28 @@ public class StandardAuthorizerTest {
             authorizer.addAcl(aclWithId.id(), aclWithId.acl());
         });
 
-        List<Action> actions = Arrays.asList(
+        List<Action> actions = List.of(
             newAction(READ, TOPIC, "foo"),
             newAction(READ, TOPIC, "bar"),
             newAction(DESCRIBE, TOPIC, "bar")
         );
 
-        assertEquals(Arrays.asList(ALLOWED, DENIED, ALLOWED), authorizer.authorize(
+        assertEquals(List.of(ALLOWED, DENIED, ALLOWED), authorizer.authorize(
             newRequestContext("alice", InetAddress.getLocalHost()), actions));
 
-        assertEquals(Arrays.asList(DENIED, DENIED, DENIED), authorizer.authorize(
+        assertEquals(List.of(DENIED, DENIED, DENIED), authorizer.authorize(
             newRequestContext("alice", host1), actions));
 
-        assertEquals(Arrays.asList(ALLOWED, DENIED, DENIED), authorizer.authorize(
+        assertEquals(List.of(ALLOWED, DENIED, DENIED), authorizer.authorize(
             newRequestContext("alice", host2), actions));
 
-        assertEquals(Arrays.asList(DENIED, DENIED, ALLOWED), authorizer.authorize(
+        assertEquals(List.of(DENIED, DENIED, ALLOWED), authorizer.authorize(
             newRequestContext("bob", InetAddress.getLocalHost()), actions));
 
-        assertEquals(Arrays.asList(DENIED, DENIED, DENIED), authorizer.authorize(
+        assertEquals(List.of(DENIED, DENIED, DENIED), authorizer.authorize(
             newRequestContext("bob", host1), actions));
 
-        assertEquals(Arrays.asList(DENIED, ALLOWED, ALLOWED), authorizer.authorize(
+        assertEquals(List.of(DENIED, ALLOWED, ALLOWED), authorizer.authorize(
             newRequestContext("bob", host2), actions));
     }
 
@@ -518,7 +516,7 @@ public class StandardAuthorizerTest {
     }
 
     private static void addManyAcls(StandardAuthorizer authorizer) {
-        List<StandardAcl> acls = Arrays.asList(
+        List<StandardAcl> acls = List.of(
             new StandardAcl(TOPIC, "green2", LITERAL, "User:*", "*", READ, ALLOW),
             new StandardAcl(TOPIC, "green", PREFIXED, "User:bob", "*", READ, ALLOW),
             new StandardAcl(TOPIC, "betamax4", LITERAL, "User:bob", "*", READ, ALLOW),
@@ -539,15 +537,15 @@ public class StandardAuthorizerTest {
     public void testAuthorizationWithManyAcls() throws Exception {
         StandardAuthorizer authorizer = createAndInitializeStandardAuthorizer();
         addManyAcls(authorizer);
-        assertEquals(Arrays.asList(ALLOWED, DENIED),
+        assertEquals(List.of(ALLOWED, DENIED),
             authorizer.authorize(new MockAuthorizableRequestContext.Builder().
                     setPrincipal(new KafkaPrincipal(USER_TYPE, "bob")).build(),
-                Arrays.asList(newAction(READ, TOPIC, "green1"),
+                List.of(newAction(READ, TOPIC, "green1"),
                     newAction(WRITE, GROUP, "wheel"))));
-        assertEquals(Arrays.asList(DENIED, ALLOWED, DENIED),
+        assertEquals(List.of(DENIED, ALLOWED, DENIED),
             authorizer.authorize(new MockAuthorizableRequestContext.Builder().
                     setPrincipal(new KafkaPrincipal(USER_TYPE, "bob")).build(),
-                Arrays.asList(newAction(READ, TOPIC, "alpha"),
+                List.of(newAction(READ, TOPIC, "alpha"),
                     newAction(WRITE, GROUP, "arbitrary"),
                     newAction(READ, TOPIC, "ala"))));
     }
@@ -645,8 +643,8 @@ public class StandardAuthorizerTest {
         StandardAuthorizer authorizer = new StandardAuthorizer();
         authorizer.configure(Map.of(SUPER_USERS_CONFIG, "User:superman"));
         Map<Endpoint, ? extends CompletionStage<Void>> futures2 = authorizer.
-            start(new AuthorizerTestServerInfo(Arrays.asList(PLAINTEXT, CONTROLLER)));
-        assertEquals(new HashSet<>(Arrays.asList(PLAINTEXT, CONTROLLER)), futures2.keySet());
+            start(new AuthorizerTestServerInfo(List.of(PLAINTEXT, CONTROLLER)));
+        assertEquals(new HashSet<>(List.of(PLAINTEXT, CONTROLLER)), futures2.keySet());
         assertFalse(futures2.get(PLAINTEXT).toCompletableFuture().isDone());
         assertTrue(futures2.get(CONTROLLER).toCompletableFuture().isDone());
     }
@@ -664,12 +662,12 @@ public class StandardAuthorizerTest {
         assertThrows(AuthorizerNotReadyException.class, () ->
             authorizer.authorize(new MockAuthorizableRequestContext.Builder().
                     setPrincipal(new KafkaPrincipal(USER_TYPE, "bob")).build(),
-                Arrays.asList(newAction(READ, TOPIC, "green1"),
+                List.of(newAction(READ, TOPIC, "green1"),
                     newAction(READ, TOPIC, "green2"))));
-        assertEquals(Arrays.asList(ALLOWED, ALLOWED),
+        assertEquals(List.of(ALLOWED, ALLOWED),
             authorizer.authorize(new MockAuthorizableRequestContext.Builder().
                     setPrincipal(new KafkaPrincipal(USER_TYPE, "superman")).build(),
-                Arrays.asList(newAction(READ, TOPIC, "green1"),
+                List.of(newAction(READ, TOPIC, "green1"),
                     newAction(WRITE, GROUP, "wheel"))));
     }
 
@@ -691,8 +689,8 @@ public class StandardAuthorizerTest {
         StandardAuthorizer authorizer = new StandardAuthorizer();
         authorizer.configure(Map.of(SUPER_USERS_CONFIG, "User:superman"));
         Map<Endpoint, ? extends CompletionStage<Void>> futures = authorizer.
-            start(new AuthorizerTestServerInfo(Arrays.asList(PLAINTEXT, CONTROLLER)));
-        assertEquals(new HashSet<>(Arrays.asList(PLAINTEXT, CONTROLLER)), futures.keySet());
+            start(new AuthorizerTestServerInfo(List.of(PLAINTEXT, CONTROLLER)));
+        assertEquals(new HashSet<>(List.of(PLAINTEXT, CONTROLLER)), futures.keySet());
         assertFalse(futures.get(PLAINTEXT).toCompletableFuture().isDone());
         assertTrue(futures.get(CONTROLLER).toCompletableFuture().isDone());
         authorizer.completeInitialLoad(new TimeoutException("timed out"));
@@ -705,7 +703,7 @@ public class StandardAuthorizerTest {
     @Test
     public void testPrefixAcls() throws Exception {
         StandardAuthorizer authorizer = createAndInitializeStandardAuthorizer();
-        List<StandardAcl> acls = Arrays.asList(
+        List<StandardAcl> acls = List.of(
                 new StandardAcl(TOPIC, "fooa", PREFIXED, "User:alice", "*", ALL, ALLOW),
                 new StandardAcl(TOPIC, "foobar", LITERAL, "User:bob", "*", ALL, ALLOW),
                 new StandardAcl(TOPIC, "f", PREFIXED, "User:bob", "*", ALL, ALLOW)
@@ -714,16 +712,16 @@ public class StandardAuthorizerTest {
             StandardAclWithId aclWithId = withId(acl);
             authorizer.addAcl(aclWithId.id(), aclWithId.acl());
         });
-        assertEquals(Arrays.asList(ALLOWED, DENIED, ALLOWED), authorizer.authorize(
+        assertEquals(List.of(ALLOWED, DENIED, ALLOWED), authorizer.authorize(
                 newRequestContext("bob"),
-                Arrays.asList(
+                List.of(
                         newAction(WRITE, TOPIC, "foobarr"),
                         newAction(READ, TOPIC, "goobar"),
                         newAction(READ, TOPIC, "fooa"))));
 
-        assertEquals(Arrays.asList(ALLOWED, DENIED, DENIED), authorizer.authorize(
+        assertEquals(List.of(ALLOWED, DENIED, DENIED), authorizer.authorize(
                 newRequestContext("alice"),
-                Arrays.asList(
+                List.of(
                         newAction(DESCRIBE, TOPIC, "fooa"),
                         newAction(WRITE, TOPIC, "bar"),
                         newAction(READ, TOPIC, "baz"))));
