@@ -21,7 +21,6 @@ import org.apache.kafka.common.Uuid;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.apache.kafka.metadata.placement.PartitionAssignmentTest.partitionAssignment;
@@ -32,9 +31,9 @@ public class TopicAssignmentTest {
 
     @Test
     public void testTopicAssignmentReplicas() {
-        List<Integer> replicasP0 = Arrays.asList(0, 1, 2);
-        List<Integer> replicasP1 = Arrays.asList(1, 2, 0);
-        List<PartitionAssignment> partitionAssignments = Arrays.asList(
+        List<Integer> replicasP0 = List.of(0, 1, 2);
+        List<Integer> replicasP1 = List.of(1, 2, 0);
+        List<PartitionAssignment> partitionAssignments = List.of(
             partitionAssignment(replicasP0),
             partitionAssignment(replicasP1)
         );
@@ -43,18 +42,18 @@ public class TopicAssignmentTest {
 
     @Test
     public void testConsistentEqualsAndHashCode() {
-        List<TopicAssignment> topicAssignments = Arrays.asList(
+        List<TopicAssignment> topicAssignments = List.of(
             new TopicAssignment(
                 List.of(
                     partitionAssignment(
-                        Arrays.asList(0, 1, 2)
+                        List.of(0, 1, 2)
                     )
                 )
             ),
             new TopicAssignment(
                 List.of(
                     partitionAssignment(
-                        Arrays.asList(1, 2, 0)
+                        List.of(1, 2, 0)
                     )
                 )
             )
@@ -76,8 +75,8 @@ public class TopicAssignmentTest {
 
     @Test
     public void testToString() {
-        List<Integer> replicas = Arrays.asList(0, 1, 2);
-        List<Uuid> directories = Arrays.asList(
+        List<Integer> replicas = List.of(0, 1, 2);
+        List<Uuid> directories = List.of(
                 Uuid.fromString("v56qeYzNRrqNtXsxzcReog"),
                 Uuid.fromString("MvUIAsOiRlSePeiBHdZrSQ"),
                 Uuid.fromString("jUqCchHtTHqMxeVv4dw1RA")
